--- a/index.html
+++ b/index.html
@@ -2,25 +2,30 @@
 <html lang="en">
 <head>
     <title>Dripps.lol</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
 </head>
 <body>
-    <div class="title">
-        <h1 style="color: white;">Downloads</h1>
+    <div class="container">
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/winrar.exe"><span>Winrar</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/VSC-Runtimes.zip"><span>Visual C runtimes all in one</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Riva.zip"><span>Riva tuner</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/direct-x.exe"><span>Direct X</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/dcontrol-password=dripps.zip"><span>Defender control (password is dripps)</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/cf-warp.msi"><span>Cloudflare warp</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/applecleaner.exe"><span>Applecleaner</span></a>
+        <i class="fa fa-discord-alt" id="discordIcon" aria-hidden="true"></i>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/activator.cmd"><span>Windows activator</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/hwid.bat"><span>Hwid checker</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Discord.exe"><span>Discord</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Medal.exe"><span>Medal</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Epic.exe"><span>Epic Launcher</span></a>
     </div>
-    <div class="normal">
-        <p><a href="http://dripps.lol:3000/download/winrar.exe">Winrar</a></p>
-        <p><a href="http://dripps.lol:3000/download/VSC-Runtimes.zip">Visual C runtimes all in one</a></p>
-        <p><a href="http://dripps.lol:3000/download/Riva.zip">Riva tuner</a></p>
-        <p><a href="http://dripps.lol:3000/download/direct-x.exe">Direct X</a></p>
-        <p><a href="http://dripps.lol:3000/download/dcontrol-password=dripps.zip">Defender control (password is dripps)</a></p>
-        <p><a href="http://dripps.lol:3000/download/cf-warp.msi">Cloudflare warp</a></p>
-        <p><a href="http://dripps.lol:3000/download/applecleaner.exe">Applecleaner</a></p>
-        <p><a href="http://dripps.lol:3000/download/activator.cmd">Windows activator</a></p>
-        <p><a href="http://dripps.lol:3000/download/hwid.bat">Hwid checker</a></p>
-        <p><a href="http://dripps.lol:3000/download/Discord.exe">Discord</a></p>
-        <p><a href="http://dripps.lol:3000/download/Medal.exe">Medal</a></p>
-        <p><a href="http://dripps.lol:3000/download/Epic.exe">Epic Launcher</a></p>
+    <div class="popup" id="popup">
+        Discord: dripps.
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
