--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/winrar.exe"><span>Winrar</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/VSC-Runtimes.zip"><span>Visual C runtimes all in one</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Riva.zip"><span>Riva tuner</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/direct-x.exe"><span>Direct X</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/dcontrol-password=dripps.zip"><span>Defender control (password is dripps)</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/cf-warp.msi"><span>Cloudflare warp</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/applecleaner.exe"><span>Applecleaner</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/winrar.exe" target="_blank"><span>Winrar</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/VSC-Runtimes.zip" target="_blank"><span>Visual C runtimes all in one</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Riva.zip" target="_blank"><span>Riva tuner</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/direct-x.exe" target="_blank"><span>Direct X</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/dcontrol-password=dripps.zip" target="_blank"><span>Defender control (password is dripps)</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/cf-warp.msi" target="_blank"><span>Cloudflare warp</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/applecleaner.exe" target="_blank"><span>Applecleaner</span></a>
         <i class="fa fa-discord-alt" id="discordIcon" aria-hidden="true"></i>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/activator.cmd"><span>Windows activator</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/hwid.bat"><span>Hwid checker</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Discord.exe"><span>Discord</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Medal.exe"><span>Medal</span></a>
-        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Epic.exe"><span>Epic Launcher</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/activator.cmd" target="_blank"><span>Windows activator</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/hwid.bat" target="_blank"><span>Hwid checker</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Discord.exe" target="_blank"><span>Discord</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Medal.exe" target="_blank"><span>Medal</span></a>
+        <a class="btn btn1 pulse" href="http://dripps.lol:3000/download/Epic.exe" target="_blank"><span>Epic Launcher</span></a>        
     </div>
     <div class="popup" id="popup">
         Discord: dripps.
